--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="alert_dialog_cancel">Disagree</string>
     <string name="alert_dialog_title">Use Google\'s location service?</string>
     <string name="alert_dialog_message">Let Google help apps determine location. This means sending anonymous location data to Google, even when no apps are running.</string>
+    <string name="list_dialog_title">Title goes here</string>
 </resources>
